--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -1,5 +1,9 @@
 name: Update README from LeetHub stats
 
+concurrency:
+  group: readme-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
   push:
     paths:
@@ -21,6 +25,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: main
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -30,8 +35,15 @@ jobs:
       - name: Generate README
         run: python3 scripts/update_readme.py
 
+      - name: Rebase on remote
+        run: |
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config user.name "github-actions[bot]"
+          git pull --rebase origin main || true
+
       - name: Commit & Push if changed
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "chore(readme): auto-update from LeetHub stats"
           file_pattern: README.md
+          push_options: --force-with-lease
